--- a/blog/2025-03-27-hello-world.mdx
+++ b/blog/2025-03-27-hello-world.mdx
@@ -7,12 +7,12 @@ tags: []
 
 Balm is now licensed under Apache 2.0, with the official binaries continuing to be distributed as All Rights Reserved.
 
-It was already visible-source before, which may have mislead some into thinking it was open source all along, but now it's official.
+It was already visible-source before, which may have misled some into thinking it was open source all along, but now it's official.
 
 {/* truncate */}
 
 I was hesitant to make this change due to prior bad experiences with being too permissive when it came to my work, 
-but I think this is a good compromise that should help Balm grow and make it a more reliable choice for mod developers.
+but I think this is a good compromise that should help Balm grow and make it a more reliable choice for other mod developers.
 
 When Balm started out, I specifically discouraged its use by others because I didn't want to carry the responsibility of downstream mods breaking 
 should I make any changes, but I quickly realized that with me being a massive downstream consumer myself (20+ mods) I would have to be careful with breaking changes either way.
