Update migration notes

--- a/docs/migration/1.21.5.md
+++ b/docs/migration/1.21.5.md
@@ -1,7 +1,13 @@
+---
+sidebar_position: -20250325
+---
+
 # Minecraft 1.21.5
 
 :::info
-These migration notes cover only the changes made to Balm APIs. For Minecraft and mod-loader specific migrations, check out their respective release announcements or primers.
+These migration notes cover only the changes made to Balm APIs. 
+
+For Minecraft and mod-loader specific migrations, check out their respective release announcements or primers.
 :::
 
 ## Overview
@@ -69,6 +75,10 @@ The previous `BalmProviders` implementation was heavily biased towards Forge's a
 With this new service, it is now possible to universally register capabilities, capability providers, and fallback providers through Balm.
 
 Read through the [Capabilities](./advanced/capabilities.md) documentation for more information.
+
+:::tip
+The new `BalmCapabilities` service has been backported to 1.20.1, 1.21.1 and 1.21.4.
+:::
 
 ## Minor Changes
 
@@ -219,7 +229,13 @@ These methods were added to allow configuring key modifiers through dummy key ma
 
 If you were using these classes, you should instead use Kuma or define your own.
 
-#### Removal of `BalmTextures`
+### Removals in `BalmRecipes`
+
+#### `registerRecipeType` that takes both RecipeType and RecipeSerializer has been removed
+
+Use `registerRecipeType` and `registerRecipeSerializer` individually instead.
+
+### Removal of `BalmTextures`
 
 This class was already empty and has not been needed for a while, since custom textures can be added to atlases through resource packs.
 
