--- a/docs/migration/1.21.5.md
+++ b/docs/migration/1.21.5.md
@@ -30,7 +30,7 @@ The command has not yet been updated to Minecraft's rendering changes.
 
 Modules are a slightly cleaner way of interacting with Balm, where instead of accessing Balm services through the `Balm` helper class in your initializer, you instead override the appropriate `register*` method in your module and have it called by Balm at the appropriate time.
 
-Read through the [Modules](./concepts/modules.md) documentation to learn more.
+Read through the [Modules](../concepts/modules.md) documentation to learn more.
 
 ### `BalmConfigSchema` for Declarative Configs
 
@@ -74,7 +74,7 @@ The previous `BalmProviders` implementation was heavily biased towards Forge's a
 
 With this new service, it is now possible to universally register capabilities, capability providers, and fallback providers through Balm.
 
-Read through the [Capabilities](./advanced/capabilities.md) documentation for more information.
+Read through the [Capabilities](../advanced/capabilities.md) documentation for more information.
 
 :::tip
 The new `BalmCapabilities` service has been backported to 1.20.1, 1.21.1 and 1.21.4.
