Fix another link

--- a/docs/migration/1.21.5.md
+++ b/docs/migration/1.21.5.md
@@ -52,7 +52,7 @@ Configs are now no longer directly tied to a given data class. Instead, their st
 
 However, the annotation-based approach remains and will continue to function. Schemas will be auto-generated for annotation-based configs so both can use the same code in the back.
 
-Read through the [Mod Configurations](./configuration) documentation for more information.
+Read through the [Mod Configurations](../configuration) documentation for more information.
 
 #### Renamed some packages for annotation-based configs
 
