--- a/docs/migration/1.21.4.md
+++ b/docs/migration/1.21.4.md
@@ -20,7 +20,7 @@ Balm for Minecraft 1.21.4 has introduced a load context for Forge.
 
 You must change your Forge entrypoint to pass in a `ForgeLoadContext` with the mod event bus from your `FMLJavaModLoadingContext`.
 
-```java title="Example on NeoForge"
+```java
 public ForgeWaystones(FMLJavaModLoadingContext context) {
     final var loadContext = new ForgeLoadContext(context.getModEventBus());
     Balm.initializeMod(Waystones.MOD_ID, loadContext, Waystones::initialize);
