Add missing sentence

--- a/docs/migration/1.21.1.md
+++ b/docs/migration/1.21.1.md
@@ -18,6 +18,8 @@ Balm for Minecraft 1.21.1 has introduced load contexts, an object that you must 
 
 ### Load Contexts
 
+Balm now requires a load context to be passed in when calling `initializeMod` in your entrypoints.
+
 On Fabric and Forge, you can simply pass `EmptyLoadContext.INSTANCE` when calling `initializeMod`.
 
 On NeoForge, you must pass a `NeoForgeLoadContext` which holds the mod event bus that was passed into the constructor of your NeoForge entrypoint.
