Update configs after backport

--- a/docs/migration/1.21.5.md
+++ b/docs/migration/1.21.5.md
@@ -42,6 +42,10 @@ The previous annotation-based approach is still present and will remain, however
 
 Balm now also supports different config types, although only `common` and `client` are universally supported across all mod loaders.
 
+:::tip
+The changes to `BalmConfig` and Declarative Configs have been backported to 1.20.1, 1.21.1 and 1.21.4.
+:::
+
 #### `SyncConfigMessage` has been removed
 
 Balm now automatically takes care of syncing mod's configs through its own packet. Mods no longer need to register a packet of their own.
@@ -119,9 +123,9 @@ This was changed to avoid confusion on what this method does. Unlike the previou
 
 ### `Balm.registerConfig` may not load your config immediately anymore
 
-On NeoForge, `common` and `client` configs are no longer immediately available. Accessing the config in your initializer will result in a crash.
+On Forge and NeoForge, `common` and `client` configs are no longer immediately available. Accessing the config in your initializer will result in a crash. You can instead use the new `ConfigLoadedEvent` to act only once the config is available. 
 
-You can use the new `ConfigLoadedEvent` to act only once the config is available. However, that may be too late if you need access to the configuration for e.g. setting up item components. **There is no good universal solution to this as of now.** You could migrate to using a declarative `BalmConfigSchema` and conditionally use `startup` instead of `common` as a type on NeoForge.
+However, that may be too late if you need access to the configuration for e.g. setting up item components. **There is no good universal solution to this as of now.**
 
 ### Reload Listeners can no longer be added directly to `ReloadableResourceManager`
 
