--- a/docs/migration/1.21.5.md
+++ b/docs/migration/1.21.5.md
@@ -127,6 +127,12 @@ On Forge and NeoForge, `common` and `client` configs are no longer immediately a
 
 However, that may be too late if you need access to the configuration for e.g. setting up item components. **There is no good universal solution to this as of now.**
 
+:::note
+This was the case all the way back to 1.20.1, but it was not as noticeable because Balm would simply return the default values for a configuration.
+
+Newer versions of Balm will crash if the config is accessed too early.
+:::
+
 ### Reload Listeners can no longer be added directly to `ReloadableResourceManager`
 
 Adding reload listeners to the `ReloadableResourceManager` directly is no longer supported, as NeoForge had made the list immutable in favor of their registration event.
