Add lookupAllModPaths breaking change

--- a/docs/migration/1.21.9.md
+++ b/docs/migration/1.21.9.md
@@ -34,6 +34,16 @@ Minecraft provides a static `register` method to create these.
 
 You will have to update your language files. This is because Minecraft now uses resource locations instead of plain strings for key categories.
 
+### `Balm.lookupAllModPaths` has been removed in favor of `Balm.visitModResources`
+
+This was necessary as NeoForge no longer provides `Path`s for mod resources. The visitor receives a `ModResource` object for every item under the given path, which can be used to read the file (equivalent to doing `Files.walk` on the returned paths previously).
+
+While `lookupAllModPaths` looked up paths in all loaded mods and returned them mapped by mod id, `visitModResources` expects a mod id to be passed in. You can get a list of all loaded mod ids using `Balm.getLoadedPrimaryModIds`. This will only return real mod ids, it does not include "provided" ids by Fabric mods.
+
+### `Balm.lookupModPath` has been removed in favor of `Balm.lookupModResource`
+
+As above, this will now return an optional `ModResource` object instead of a `Path`.
+
 ## Removals 
 
 ### `DefaultContainer.deserialize` and `DefaultContainer.serialize` has been removed in favor of `ContainerHelper.loadAllItems` and `ContainerHelper.saveAllItems`
