More migration notes

--- a/docs/migration/1.21.11.md
+++ b/docs/migration/1.21.11.md
@@ -30,17 +30,81 @@ The command has not yet been updated to Minecraft's rendering changes.
 
 ## Breaking Changes
 
+### Balm no longer has an additional Minecraft version suffix in its versions
+
+Instead of `21.11.1+1.21.11`, the version is now just `21.11.1`.
+
+You also no longer need to include Kuma in your build manually, as Balm correctly defines it as an exposed dependency now.
+
 ### Many `net.blay09.mods.balm` packages have moved
 
 I recommend cleaning out the broken imports and just reimporting using your IDE.
 
+```diff
+- import net.blay09.mods.balm.Balm;
++ import net.blay09.mods.balm.api.Balm;
+- import net.blay09.mods.balm.api.module.BalmModule;
++ import net.blay09.mods.balm.platform.module.BalmModule;
+- import net.blay09.mods.balm.api.client.module.BalmClientModule;
++ import net.blay09.mods.balm.client.platform.module.BalmClientModule;
+- import net.blay09.mods.balm.api.block.entity.OnLoadHandler;
++ import net.blay09.mods.balm.world.level.block.entity.OnLoadHandler;
+- import net.blay09.mods.balm.api.loot.BalmLootModifier;
++ import net.blay09.mods.balm.world.level.storage.loot.BalmLootModifier;
+- import net.blay09.mods.balm.api.container.ContainerUtils;
++ import net.blay09.mods.balm.world.ContainerUtils;
+- import net.blay09.mods.balm.api.network.BalmNetworking;
++ import net.blay09.mods.balm.network.BalmNetworking;
+- import net.blay09.mods.balm.api.command.BalmCommands;
++ import net.blay09.mods.balm.commands.BalmCommands;
+- import net.blay09.mods.balm.api.config.reflection.Comment;
++ import net.blay09.mods.balm.platform.config.reflection.Comment;
+- import net.blay09.mods.balm.api.config.reflection.Config;
++ import net.blay09.mods.balm.platform.config.reflection.Config;
+- import net.blay09.mods.balm.api.config.reflection.NestedType;
++ import net.blay09.mods.balm.platform.config.reflection.NestedType;
+- import net.blay09.mods.balm.neoforge.NeoForgeLoadContext;
++ import net.blay09.mods.balm.neoforge.platform.runtime.NeoForgeLoadContext;
+```
+
+Event and Registry related methods have been moved elsewhere - see below.
+
+### Many methods in `Balm` have been renamed
+
+```diff
+- Balm.getConfig()
++ Balm.config()
+- Balm.getNetworking()
++ Balm.networking()
+- Balm.getPermissions()
++ Balm.permissions()
+- Balm.getHooks()
++ Balm.hooks()
+```
+
+Event and Registry related methods have been moved elsewhere - see below.
+
+### `EmptyLoadContext` has been removed in favor of loader-specific contexts
+
+Use `FabricLoadContext.INSTANCE` on Fabric, and construct a `NeoForgeLoadContext` or `ForgeLoadContext` on Neo/Forge.
+
+### `BalmBlockEntity` has been removed in favor of `BalmBlockEntityUtils`
+
+This class was a relic from the past, was misleading developers to think they were required to use it, and couldn't be used when extending existing block entity classes. Therefore it has been removed.
+
+You can instead implement `getUpdateTag` and `getUpdatePacket` on your block entity by calling the respective `BalmBlockEntityUtils` method inside. You can call what used to be `sync()` via `BalmBlockEntityUtils.sync(BlockEntity)`.
+
+Once deobfuscation is gone for good, we may be able to provide an interface defaulting those methods (which isn't possible at the moment due to remapping).
+
 ### The old registry methods (`Balm.getBlocks()` etc.) have been removed in favor of the new `BalmRegistrars`
 
-See the [short blog post](blog/2025-07-11-register-refactor) and docs on [adding content](registries) for how to use the new registrars.
+See the [short blog post](/blog/registry-refactor) and docs on [adding content](/docs/registries/blocks) for how to use the new registrars.
+
+`DeferredObject` no longer exists, you can use `DeferredBlock`, `DeferredItem` or `Holder` now using `.asDeferredBlock()` or `.asHolder()` etc. in registration.
+
+Most things that used to be a `Balm*` class like `BalmBlocks` have now become `BalmBlockRegistrar`. Your mod's initializer will be passed a `BalmRegistrars` or `BalmClientRegistrars` instance that provides access to all registrars. `BalmModule` implementations have their methods called with registrars as before.
 
 ### The old event system has been removed in favor of the new event mappers
-
-#### Events are now available as event mappers, old event classes removed
 
 Instead of Balm keeping track of its own event bus, event mappers instead take your registrations (and invocations) and map them directly to the native mod loader events (or a Balm supplemental event in cases where mod loaders do not support the event). This allows for better compatibility and avoids wrapping every event in a Balm-specific class.
 
@@ -50,7 +114,7 @@ Listeners are registered directly on these event mappers via `.register(<handler
 
 Event handlers receive the callback parameters directly, i.e. there is no longer an `event` object.
 
-#### `BalmEvent` and `Balm.getEvents().fire()` has been removed
+If you're using a `BalmModule`, instead of defining handlers in `registerEvents` you can just do it in `initialize()` or anywhere else now.
 
 To define your own events, you can use `EventMapper.createBound()` with your existing event class, and fire them using its `.invoker()`.
 
