Add some more renames

--- a/docs/migration/1.21.11.md
+++ b/docs/migration/1.21.11.md
@@ -51,6 +51,34 @@ I recommend cleaning out the broken imports and just reimporting using your IDE.
 + import net.blay09.mods.balm.world.level.block.entity.OnLoadHandler;
 - import net.blay09.mods.balm.api.loot.BalmLootModifier;
 + import net.blay09.mods.balm.world.level.storage.loot.BalmLootModifier;
+- import net.blay09.mods.balm.api.container.BalmContainerProvider;
++ import net.blay09.mods.balm.world.BalmContainerProvider;
+- import net.blay09.mods.balm.api.container.DefaultContainer;
++ import net.blay09.mods.balm.world.DefaultContainer;
+- import net.blay09.mods.balm.api.container.SubContainer;
++ import net.blay09.mods.balm.world.SubContainer;
+- import net.blay09.mods.balm.api.container.CombinedContainer;
++ import net.blay09.mods.balm.world.CombinedContainer;
+- import net.blay09.mods.balm.api.fluid.BalmFluidTankProvider;
++ import net.blay09.mods.balm.platform.fluid.BalmFluidTankProvider;
+- import net.blay09.mods.balm.api.fluid.DefaultFluidTank;
++ import net.blay09.mods.balm.platform.fluid.DefaultFluidTank;
+- import net.blay09.mods.balm.api.fluid.FluidTank;
++ import net.blay09.mods.balm.platform.fluid.FluidTank;
+- import net.blay09.mods.balm.api.menu.BalmMenuFactory;
++ import net.blay09.mods.balm.world.BalmMenuFactory;
+- import net.blay09.mods.balm.api.menu.BalmMenuProvider;
++ import net.blay09.mods.balm.world.BalmMenuProvider;
+- import net.blay09.mods.balm.common.CommonCapabilities;
++ import net.blay09.mods.balm.platform.capabilities.CommonCapabilities;
+- import net.blay09.mods.balm.api.tag.BalmItemTags;
++ import net.blay09.mods.balm.tags.BalmItemTags;
+- import net.blay09.mods.balm.api.energy.BalmEnergyStorageProvider;
++ import net.blay09.mods.balm.platform.energy.BalmEnergyStorageProvider;
+- import net.blay09.mods.balm.api.energy.DefaultEnergyStorage;
++ import net.blay09.mods.balm.platform.energy.DefaultEnergyStorage;
+- import net.blay09.mods.balm.api.energy.EnergyStorage;
++ import net.blay09.mods.balm.platform.energy.EnergyStorage;
 - import net.blay09.mods.balm.api.container.ContainerUtils;
 + import net.blay09.mods.balm.world.ContainerUtils;
 - import net.blay09.mods.balm.api.network.BalmNetworking;
@@ -127,3 +155,7 @@ If you do want to provide backwards compatibility or continue to have your mods 
 This is to avoid key mappings from being handled when the user has a widget like a text field focused. 
 
 You can override this behaviour by calling `.ignoreScreenFocus()` in your key mapping builder.
+
+### `CustomRenderBoundingBox` has been removed
+
+This interface was not actually used anymore.
