Fix broken link

--- a/blog/2025-07-11-registry-refactor.mdx
+++ b/blog/2025-07-11-registry-refactor.mdx
@@ -27,5 +27,5 @@ There are two more refactors with larger impact planned:
 - Package Restructure (1.21.11): With the goal of staying close to Vanilla code design and making relevant code easier to discover, Balm is adopting Vanilla's package structure. This means your imports will have to be renamed in 1.21.11.
 
 :::tip
-There is some other cool new features in this release as well, such as [Declarative Quick Move](./utilities/quick-move.md), progress renderer utilities, a safe-to-access `isShiftDown` for tooltips [and other minor things](https://github.com/TwelveIterationMods/Balm/blob/d1fc837bf136e157df607d4fd301f1385043701b/CHANGELOG.md).
+There is some other cool new features in this release as well, such as [Declarative Quick Move](/docs/utilities/quick-move), progress renderer utilities, a safe-to-access `isShiftDown` for tooltips [and other minor things](https://github.com/TwelveIterationMods/Balm/blob/d1fc837bf136e157df607d4fd301f1385043701b/CHANGELOG.md).
 :::
