Add note on missing ModelLoading API on Fabric

--- a/docs/migration/1.21.11.md
+++ b/docs/migration/1.21.11.md
@@ -24,6 +24,10 @@ This was the first refactor Balm has undergone since it started as a roughly put
 
 ## ⚠️ Known Issues
 
+### `BlockStateModel`s are not initialized on Fabric
+
+Fabric has not ported its model loading API yet. Mods using custom `BlockStateModel`s will run into `NullPointerException`s due to the models never initializing.
+
 ### `/balm export icons` is not yet functional
 
 The command has not yet been updated to Minecraft's rendering changes.
