--- a/docs/migration/1.21.11.md
+++ b/docs/migration/1.21.11.md
@@ -28,6 +28,16 @@ This was the first refactor Balm has undergone since it started as a roughly put
 
 Fabric has not ported its model loading API yet. Mods using custom `BlockStateModel`s will run into `NullPointerException`s due to the models never initializing.
 
+### Data Attachments are not available on Forge
+
+Forge does not have a native system for data attachments like Fabric and NeoForge. Balm may provide a basic implementation in the future, but right now attempting to access data attachments on Forge will crash.
+
+### Recipe Viewers Support has no effect currently
+
+With the `ResourceLocation` to `Identifier` rename, we can't compile against an older API of JEI at the moment, so the implementation was temporarily stripped out until JEI updates.
+
+Once JEI updates, a Balm update will re-add the inbuilt support.
+
 ### `/balm export icons` is not yet functional
 
 The command has not yet been updated to Minecraft's rendering changes.
