Add project generator

--- a/content/1.getting-started/1.index.md
+++ b/content/1.getting-started/1.index.md
@@ -21,19 +21,18 @@ In order to use Balm, you should have
 
 ## Creating a Project
 
-### a) Using the Project Generator
+Use this generator to download a blank mod with everything already set up.
 
-:::note
-In the future I would like to have a project generator that prepares a project for you, but it's not ready yet.
-:::
+::balm-project-generator
+::
 
-### b) Using the Template Repository
+You can extract the generated zip file, open the project in your IDE, and jump straight to the [next page](/getting-started/mod).
 
-Click `Use this template` on the [balm-mod](https://github.com/TwelveIterationMods/balm-mod) repository to create a copy of the template repository.
+::div{.text-sm}
+Alternatively, you can use the [template repository](https://github.com/TwelveIterationMods/balm-mod) on GitHub. However, you will have to follow the steps in the README and manually update the template with your own names and properties.
+::
 
-Make sure you select `Include all branches` if you intend to release for older versions.
-
-Clone your new repository and follow the steps in the repository's `README` to get set up.
+---
 
 ## Adding Balm to an Existing Project
 
